<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/gap_x5"
    android:background="#ffffff"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:fillViewport="true">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Text.H6.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/KEEP_ALIVE_TEXT" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_time"
        style="@style/GesecurInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="false"
        android:layout_marginTop="@dimen/gap_x4">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/GesecurEditText"
            android:id="@+id/edit_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/KEEP_ALIVE_HINT"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        style="@style/GesecurButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UTILS_ACCEPT"
        android:layout_marginTop="@dimen/gap_x8" />

</LinearLayout>